--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag 'yatch.svg' %>
-    <span>My Yatchy site</span>
+    <span>My Yachty site</span>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,29 +12,32 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Home", "#", class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Messages", "#", class: "nav-link" %>
-        </li>
         <li class="nav-item dropdown">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <a href="#" data-toggle="dropdown" id="navbarDropdown">
+          <%= lavatar_tag(current_user.first_name[0].upcase, 40,
+              {
+                key:        current_user.id,
+                class:      "avatar"
+              }
+          ) %>
+        </a>
+          <!-- <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %> -->
+
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Action", "#", class: "dropdown-item" %>
+           <%= link_to "Add yacht", yachts_new_path, class: "dropdown-item" %>
             <%= link_to "Another action", "#", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
       <% else %>
-        <% if controller_name != 'sessions'  %>
+        <% unless %w[sessions registrations].include? controller_name  %>
           <li class="nav-item">
             <%= link_to "Login", "#", class: "btn btn-primary", id: "btn-login", data: { toggle: 'modal', target: '#loginModal' } %>
           </li>
-        <% end %>
           <li class="nav-item">
             <%= link_to 'Register', new_user_registration_path, class: "btn btn-info ml-2" %>
           </li>
+        <% end %>
       <% end %>
     </ul>
   </div>
