--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,16 +13,18 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item dropdown">
-        <a href="#" data-toggle="dropdown" id="navbarDropdown">
-          <%= lavatar_tag(current_user.first_name[0].upcase, 40,
-              {
-                key:        current_user.id,
-                class:      "avatar"
-              }
-          ) %>
-        </a>
-          <!-- <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %> -->
-
+          <a href="#" data-toggle="dropdown" id="navbarDropdown">
+            <% if current_user.avatar.attached? %>
+              <%= cl_image_tag current_user.avatar.key, class: 'avatar' %>
+            <% else %>
+                <%= lavatar_tag(current_user.first_name[0].upcase, 40,
+                    {
+                      key:        current_user.id,
+                      class:      "avatar"
+                    }
+                ) %>
+            <% end %>
+          </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
            <%= link_to "Add yacht", yachts_new_path, class: "dropdown-item" %>
             <%= link_to "Another action", "#", class: "dropdown-item" %>
