edited logo name

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-yacht">
   <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag 'yatch.svg' %>
+    <%= image_tag 'yacht.svg' %>
     <span>My Yachty site</span>
   <% end %>
 
