--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,14 @@
 body {
   font-family: 'Lato', sans-serif;
 }
+
+#editUserModal {
+  .avatar {
+    width: 100px;
+  }
+
+  input[type="file"] {
+    width: 50%;
+    margin: auto;
+  }
+}
