--- a/app/views/devise/registrations/_modal.html.erb
+++ b/app/views/devise/registrations/_modal.html.erb
@@ -1,5 +1,4 @@
 <div class="modal fade" id="editUserModal" tabindex="-1" role="dialog" aria-labelledby="editUserModalTitle" aria-hidden="true">
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -9,34 +8,71 @@
         </button>
       </div>
       <div class="modal-body">
-        <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+      <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <a class="nav-link active" id="pills-avatar-tab" data-toggle="pill" href="#pills-avatar" role="tab" aria-controls="pills-avatar" aria-selected="true">Avatar</a>
+        </li>
+        <li class="nav-item" role="presentation">
+          <a class="nav-link" id="pills-email-tab" data-toggle="pill" href="#pills-email" role="tab" aria-controls="pills-email" aria-selected="false">Email</a>
+        </li>
+        <li class="nav-item" role="presentation">
+          <a class="nav-link" id="pills-password-tab" data-toggle="pill" href="#pills-password" role="tab" aria-controls="pills-password" aria-selected="false">Password</a>
+        </li>
+        <li class="nav-item" role="presentation">
+          <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-other" role="tab" aria-controls="pills-contact" aria-selected="false">Other</a>
+        </li>
+      </ul>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+      <div class="tab-content text-center" id="pills-tabContent">
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
+        <div class="tab-pane fade show active" id="pills-avatar" role="tabpanel" aria-labelledby="pills-home-tab">
+           <%= current_user.navbar_avatar(size: 100) %>
+           <div class="mt-4">
+            <%= simple_form_for(resource, as: resource_name, url: users_avatar_path(resource_name), html: { method: :put }) do |f| %>
+                <%= f.input :avatar, as: :file, label: false %>
+
+                <%= f.button :submit, 'Update', class: 'btn btn-info' %>
+            <% end %>
+           </div>
+        </div>
+
+        <div class="tab-pane fade" id="pills-email" role="tabpanel" aria-labelledby="pills-profile-tab">
+           <%= simple_form_for(resource, as: resource_name, url: users_email_path(resource_name), html: { method: :put }) do |f| %>
+              <%= f.input :email %>
+              <%= f.input :current_password,
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
-    <%= f.input :avatar, as: :file %>
-  </div>
+
+              <%= f.button :submit, 'Update', class: 'btn btn-info' %>
+          <% end %>
+        </div>
+
+        <div class="tab-pane fade" id="pills-password" role="tabpanel" aria-labelledby="pills-contact-tab">
+          <%= simple_form_for(resource, as: resource_name, url: users_password_path(resource_name), html: { method: :put }) do |f| %>
+            <%= f.input :password,
+                required: true,
+                label: 'New password',
+                input_html: { autocomplete: "new-password" } %>
+            <%= f.input :password_confirmation,
+                required: true,
+                input_html: { autocomplete: "new-password" } %>
+            <%= f.input :current_password,
+                hint: "we need your current password to confirm your changes",
+                required: true,
+                input_html: { autocomplete: "current-password" } %>
+            <%= f.button :submit, 'Update', class: 'btn btn-info' %>
+          <% end %>
+        </div>
+
+        <div class="tab-pane fade" id="pills-other" role="tabpanel" aria-labelledby="pills-contact-tab">
+         <%= link_to "Remove my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-outline-danger' %>
+
+        </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <%= f.button :submit, "Update", class: 'btn btn-primary' %>
+
       </div>
     </div>
   </div>
-  <% end %>
 </div>
