index partial frontend

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,19 +5,7 @@
     <hr class="my-4">
     <p>Join our community and get in touch with thousands of Yachts' renters.</p>
     <p class="lead">
-    <%= button_to 'Sign Up', new_user_session_path, class: "btn btn-success" %>
+    <%= button_to 'Sign Up', new_user_session_path, class: "btn btn-info ml-20" %>
     </p>
-  </div>
-</div>
-
-<div class="container">
-  <h2>Hot Yachts 🔥</h2>
-  <div class="card">
-    <% @yachts.first(5).each do |yacht| %>
-      <div class="card-body">
-        <h3><%= yacht.title %></h2>
-        <h6><%= yacht.description %></h5>
-      </div>
-   <% end %>
   </div>
 </div>
