--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,9 +4,10 @@ body {
     font-size: 4em;
   }
   .jumbotron {
-    background-image: url(https://www.jetsetter.com/wp-content/uploads/sites/7/2020/04/GettyImages-1066136250-1380x690.jpg);
+    background-image: url(https://images.unsplash.com/photo-1447108477593-21b8c4edc73f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);
     background-size: cover;
-    height: 100vh;
+    background-position: right bottom;
+    height: 75vh;
     .container {
       background: rgba(255, 255, 255, .6);
       border-radius: 10px;
