--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,9 @@
   <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
-    <%= render 'layouts/header'  %>
+    <%= render 'layouts/header' %>
     <div class="container mt-3">
+    <%= render 'layouts/carousel' %>
       <%= yield %>
     </div>
   </body>
