--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,9 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+@import "mapbox-gl/dist/mapbox-gl";
+@import "mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
+
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
