--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Yatchs#index</h1>
-<p>Find me in app/views/yatchs/index.html.erb</p>
+  <% @yachts.each do |yacht| %>
+     <%= @yacht.title%>
+     <%= link_to "Show", yacht_path(yacht) %>
+     <% if policy(yacht).edit? %>
+        <%= link_to "Edit", yachts_path(yacht) %>
+     <% end %>
+     <% if policy(yacht).destroy? %>
+ <%= link_to "Delete", yacht method: :delete, data: { confirm:"Are you sure?"} %>
+     <% end %>
+ <% end %>
+
+<% if policy(Yacht).new? %>
+<%= link_to "Create new listing", yachts_new_path %>
+<% end %>
