added services and equipments

--- a/app/views/yachts/new.html.erb
+++ b/app/views/yachts/new.html.erb
@@ -12,6 +12,10 @@
     <%= f.input :price_per_day,
 								required: true,
 								input_html: { autocomplete: "price_per_day" } %>
+
+    <%= f.input :services, collection: Yacht::SERVICES, input_html: { multiple: true }, include_hidden: false %>
+    <%= f.input :equipments, collection: Yacht::EQUIPMENTS, input_html: { multiple: true }, include_hidden: false %>
+
     <%= f.input :lat, input_html: {class: 'd-none'}, label: false %>
     <%= f.input :long, input_html: {class: 'd-none'}, label: false %>
 	</div>
