--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,7 +24,7 @@
                 <%= link_to "update profile", "#", class: "small", data: { toggle: 'modal', target: '#editUserModal' } %>
               </div>
             </div>
-              <%= link_to yachts_new_path, class: "dropdown-item" do %>
+              <%= link_to yacht_user_path(current_user), class: "dropdown-item" do %>
                 <%= image_tag 'list.svg' %> Your listings
               <% end %>
               <%= link_to yachts_new_path, class: "dropdown-item" do %>
