--- a/app/views/yachts/new.html.erb
+++ b/app/views/yachts/new.html.erb
@@ -24,9 +24,9 @@
     <%= f.input :lat, input_html: {class: 'd-none'}, label: false %>
     <%= f.input :long, input_html: {class: 'd-none'}, label: false %>
 	</div>
-
+  <label for="geocoder">Location</label>
   <div id="geocoder" class="geocoder"></div>
-  <div style="position: relative; height: 30vh" class="mb-2">
+  <div style="height: 30vh" class="mb-2 position-relative">
     <div id="map"></div>
   </div>
 
@@ -35,20 +35,3 @@
     <%= f.button :submit, "Create listing", class: 'btn btn-primary w-100' %>
   </div>
 <% end %>
-
-<style>
-
-.mapboxgl-ctrl-geocoder {
-min-width: 100%;
-}
-#map {
-margin-top: 10px;
-}
-
-#map {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-}
-</style>
