--- a/app/views/yachts/new.html.erb
+++ b/app/views/yachts/new.html.erb
@@ -9,7 +9,9 @@
 								required: true,
 								input_html: { autocomplete: "description" } %>
 
-
+    <%= f.input :price_per_day,
+								required: true,
+								input_html: { autocomplete: "price_per_day" } %>
 
     <%= f.input :bed_space,
 								required: true,
