--- a/app/views/yachts/_card.html.erb
+++ b/app/views/yachts/_card.html.erb
@@ -12,5 +12,11 @@
   </ul>
   <div class="card-body">
     <%= link_to 'Discover it!', yacht_path(locals.id), class: 'btn btn-primary w-100' %>
+    <% if policy(locals).destroy? %>
+      <%= link_to "update", yacht_edit_path(locals), class: 'badge badge-warning mt-3' %>
+    <% end %>
+    <% if policy(locals).update? %>
+      <%= link_to "remove", yacht_path(locals), method: :delete, class: 'badge badge-danger mt-3' %>
+    <% end %>
   </div>
 </div>
