added user list

--- a/app/views/yachts/user_list.html.erb
+++ b/app/views/yachts/user_list.html.erb
@@ -1,4 +1,4 @@
-<h2 class="my-3 text-center"><span class="text-primary"><%= @user.full_name %></span> yachts</h2>
+<h2 class="my-3 text-center"><span class="text-primary"><%= @user.first_name %>'s</span> yachts</h2>
 <% if @yachts.count.positive? %>
   <div class="card-columns">
     <% @yachts.each do |yacht| %>
@@ -7,7 +7,7 @@
   </div>
 <% elsif user_signed_in? && current_user.id == params[:id].to_i %>
   <div class="w-50 my-3 mx-auto text-center">
-    <p>You still haven't created a yacht to show.</p>
+    <p>You still haven't added a yacht.</p>
     <%= link_to 'Add your first yacht!', yachts_new_path, class: 'btn btn-primary' %>
   </div>
 <% else %>
