--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <body class="<%= controller_name %>-<%= action_name %>">
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
-    <div class="container mt-3">
+    <div class="container my-3 bg-white p-3 rounded">
       <%= yield %>
     </div>
   </body>
