--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,6 +3,10 @@ body {
   #title {
     font-size: 4em;
   }
+  #trend-title{
+    text-align: center;
+    padding: 20px;
+  }
   .jumbotron {
     background-image: url(https://images.unsplash.com/photo-1447108477593-21b8c4edc73f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);
     background-size: cover;
@@ -20,13 +24,15 @@ body {
       width: 100vh;
 
     }
-  }  
+  }
+  .carousel-container > img {
+    border-radius: 8px;
+  }
   .carousel-container{
     margin: auto;
-    width: 50%;
-    border: 3px solid black;
-    padding: 10px;
-
+    width: 70%;
+    border: 3px solid gray;
+    border-radius: 8px;
     .carousel-caption {
       font-weight: bold;
       .carousel-content{
