--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
     <%= render 'shared/flashes' %>
     <%= render 'layouts/header' %>
     <div class="container mt-3">
-    <%= render 'layouts/carousel' %>
       <%= yield %>
     </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
