--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,8 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "bootstrap-select/dist/css/bootstrap-select";
+
 
 @import "mapbox-gl/dist/mapbox-gl";
 @import "mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
