--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,24 +2,25 @@
   <h1 class="display-4">How it works:</h1>
 </div>
 
-
-
 <div class="container-steps">
-  <div class="float-left step-item"> 
+  <div class="step-item"> 
 	<i class="fas fa-user-plus iconDetails"></i>	
 	<div class="icon-steps">
 	  <h4>Register</h4>
 	</div>
   </div>
-  <div class="float-left step-item">
+  <div class="step-item">
     <i class="fas fa-ship iconDetails"></i>
     <div class="icon-steps">
 	  <h4>Choose</h4>
 	</div>
   </div>
-  <div class="float-left step-item">   
+  <div class="step-item">   
     <i class="fas fa-anchor iconDetails"></i>
 	<div class="icon-steps">
 	  <h4>Ready? sail!</h4>
 	</div>
-</div>  
+</div>
+</div>
+
+
