seeds and misc.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,8 +12,8 @@
 @import "bootstrap-select/dist/css/bootstrap-select";
 
 
-@import "mapbox-gl/dist/mapbox-gl";
-@import "mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
+// @import "mapbox-gl/dist/mapbox-gl";
+// @import "mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
 
 // Your CSS partials
 @import "components/index";
