--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -1,24 +1,131 @@
-<h2><%= @yacht.title.titlecase %></h2>
+<h2 class="mt-2 mb-3"><%= @yacht.title.titlecase %></h2>
 
+<% if @yacht.photos.attached? %>
 
+  <% indicators = divs = '' %>
+  <% @yacht.photos.each.with_index do |photo, idx| %>
+    <%
+      active = idx == 0 ? 'active' : ''
+      indicators += <<-STRING
+        <li data-target="#carouselExampleIndicators" data-slide-to="#{idx}" class="#{active}"></li>
+      STRING
 
+      divs += <<-STRING
+        <div class="carousel-item #{active}">
+          #{cl_image_tag photo.key}
+        </div>
+      STRING
+    %>
+  <% end %>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <%= indicators.html_safe %>
+    </ol>
+    <div class="carousel-inner">
+      <%= divs.html_safe %>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+<% end %>
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/yacht-oceanco-102-m-oggetto-editoriale-800x600-1528446630.jpg?crop=1.00xw:0.727xh;0,0.118xh&resize=640:*);">
-  <div class="container">
+<div class="row no-gutters mt-5">
+  <div class="col-12 col-sm-6 col-md-8">
+    <div>
+      <h4>Description</h4>
+      <p class="box"><%= @yacht.description %></p>
+    </div>
 
+    <div>
+      <h4>Services</h4>
+      <ul class="box">
+        <% @yacht.service_types.each do |service| %>
+          <li><%= service.name %></li>
+        <% end %>
+      </ul>
+    </div>
+
+    <div>
+      <h4>Equipments</h4>
+      <ul class="box">
+        <% @yacht.equipment_types.each do |equipment| %>
+          <li><%= equipment.name %></li>
+        <% end %>
+      </ul>
+    </div>
+
+  </div>
+
+  <div class="col-6 col-md-4">
+    <div>
+
+      <div class="card user-info text-center p-3 w-75 mx-auto mb-3">
+         <ul class="list-group list-group-flush">
+            <li class="list-group-item"><strong><%= @yacht.price_per_day %>€</strong> / day</li>
+            <li class="list-group-item"><strong><%= @yacht.bed_space %></strong> bed spaces</li>
+          </ul>
+
+          <div class="card-body">
+            <p class="card-text">
+              <%= link_to 'Book it!', yacht_user_path(@user), class: 'btn btn-success' %>
+            </p>
+        </div>
+      </div>
+
+    </div>
+
+    <div>
+      <div class="card user-info text-center p-3 w-75 m-auto">
+        <%= @user.navbar_avatar(size: 80) %>
+        <div class="card-body">
+          <h5><%= @user.full_name %></h5>
+          <p class="card-text">
+            Joined <time class="timeago" datetime="<%= @user.created_at.iso8601 %>"></time>
+          </p>
+          <p class="card-text">
+            <%= link_to 'See other yachts', yacht_user_path(@user), class: 'btn btn-outline-info' %>
+          </p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
+<h4>Location</h4>
+<p><%= @yacht.address %></p>
+<div class="row">
+  <div class="col">
+    <div style="height: 30vh" class="mb-2 position-relative">
+      <div id="map" data-apikey="<%= ENV['MAPBOX_KEY'] %>" data-latitude="<%= @yacht.lat %>" data-longitude="<%= @yacht.long %>">
+      </div>
+  </div>
   </div>
 </div>
 
+<style>
+.box {
+  background-color: #f3f3f3;
+  width: 100%;
+  border-radius: 5px;
+  padding: 20px;
+  list-style: none;
+}
+.carousel-item img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
 
-    <p><%= @yacht.description %></p>
-
-
-
-
-
-<div class="show-button">
-  <%= link_to "Back", "yachts_path", class: "btn btn-primary" %>
-  <a class="btn btn-primary" href="#">Book now</a>
-</div>
-
-
+.user-info .avatar {
+  width: 80px;
+  margin: auto;
+}
+</style>
