--- a/app/views/yachts/_card.html.erb
+++ b/app/views/yachts/_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card text-center" style="width: 18rem;">
+<div class="card text-center" style="max-width: 18rem;">
   <% if locals.photos.attached? %>
    <%= image_tag locals.photos.sample, class: 'card-img-top' %>
   <% end %>
