--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -18,31 +18,6 @@ body {
   text-align: center;
 }
 
-#yacht-banner {
-  margin: auto;
-  margin-bottom: 20px;
-  position: static;
-  background-image: url("https://images.unsplash.com/photo-1519011866958-6ac4dd2bbba4?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NTl8fHNlYSUyMHBhdHRlcm58ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
-  background-size: cover;
-  background-position:75% 25%;
-}
-
-#yacht-banner > img {
-  object-fit: cover;
-}
-
-#yacht-banner {
-
-  h1 {
-    color: black;
-    opacity: 0.9;
-}
-
-  p {
-    color: white;
-    opacity: 0.9;
-    text-shadow: 2px 2px grey;
-  }
   #trend-title{
     text-align: center;
     padding: 20px;
@@ -59,21 +34,22 @@ body {
       padding: 3vh;
       color: black!important;
       display: block!important;
-    }  
+    }
     .center-banner {
       width: 100vh;
 
-.yacht-banner-content {
+  .yacht-banner-content {
     margin-top:auto;
     margin-bottom:auto;
     text-align:center;
+  }
+}
 }
 
 #map {
   height: 100%;
 }
-    }
-  }
+
   .carousel-container > img {
     border-radius: 8px;
   }
@@ -82,6 +58,11 @@ body {
     width: 70%;
     border: 3px solid gray;
     border-radius: 8px;
+
+    .carousel-item.active {
+      cursor: pointer;
+    }
+
     .carousel-caption {
       font-weight: bold;
       .carousel-content{
@@ -90,14 +71,11 @@ body {
         background: rgb(60, 60, 60);
         background: rgba(60, 60, 60, 0.4);
       > h5 {
-        color: black;
-        text-shadow: 1px 1px #ffc759;
+        color: $white;
+        padding: 1rem;
+        font-size: 2rem;
       }
-      > p {
-        color: #ffc759;
-        text-shadow: 2px 2px black;
-      }
+
       }
     }
   }
-}  
