--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -12,11 +12,11 @@
   display: flex;
 }
 .iconDetails {
-    margin: auto; 
+    margin: auto;
     font-size: 50px;
     padding: 10px;
-  } 
-     
+  }
+
 .step-item {
   width: 200px;
   font-size: larger;
@@ -27,6 +27,9 @@
   background-color: rgba(255, 255, 255, 0.6);
   padding: 8px;
   border-radius: 8px;
+  transition: background-color .4s ease;
+  color: $black!important;
+  text-decoration: none!important;
 }
 
 .step-item:hover {
