--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,24 +3,37 @@
 </div>
 
 <div class="container-steps">
-  <div class="step-item"> 
-	<i class="fas fa-user-plus iconDetails"></i>	
-	<div class="icon-steps">
-	  <h4>Register</h4>
-	</div>
-  </div>
-  <div class="step-item">
+
+  <% if user_signed_in? %>
+    <%= link_to yachts_new_path, class: 'step-item' do %>
+      <i class="fas fa-user-plus iconDetails"></i>
+      <div class="icon-steps">
+        <h4>Add</h4>
+      </div>
+    <% end %>
+  <% else %>
+    <%= link_to new_user_registration_path, class: 'step-item' do %>
+      <i class="fas fa-user-plus iconDetails"></i>
+      <div class="icon-steps">
+        <h4>Register</h4>
+      </div>
+    <% end %>
+  <% end %>
+
+  <%= link_to yachts_path, class: 'step-item' do %>
     <i class="fas fa-ship iconDetails"></i>
     <div class="icon-steps">
-	  <h4>Choose</h4>
-	</div>
-  </div>
-  <div class="step-item">   
+	    <h4>Choose</h4>
+	  </div>
+  <% end %>
+
+  <%= link_to yacht_user_path(current_user || 1), class: 'step-item' do %>
     <i class="fas fa-anchor iconDetails"></i>
-	<div class="icon-steps">
-	  <h4>Ready? sail!</h4>
-	</div>
-</div>
+	  <div class="icon-steps">
+	    <h4>Ready? sail!</h4>
+	  </div>
+  <% end %>
+
 </div>
 
 
