--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,16 @@
   <body class="<%= controller_name %>-<%= action_name %>">
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
-    <%= render 'layouts/header' %>
-    <div class="container my-3 bg-white p-3 rounded">
+
+    <% if controller_name == 'pages' && action_name == 'home' %>
+      <%= render 'layouts/header' %>
+    <% end %>
+
+    <div class="container my-3 bg-white p-3 rounded" id="content">
       <%= yield %>
     </div>
-    <%= render 'layouts/footer' %>
+    <% if controller_name == 'pages' && action_name == 'home' %>
+      <%= render 'layouts/footer' %>
+    <% end %>
   </body>
 </html>
