--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,35 +1,6 @@
 .navbar-yacht {
   justify-content: space-between;
-  transition: background-color .3s ease-in;
-}
-
-nav.scrolled {
-  background-color: $white;
-}
-
-.navbar-brand {
-  padding: 4px 9px;
-}
-
-nav:not(.scrolled) {
-  .navbar-brand {
-    background-color: rgba(255, 255, 255, 0.6);
-    border-radius: 16px;
-  }
-
-  span {
-    color: $black;
-  }
-}
-
-body:not(.pages-home) {
-  .navbar-yacht {
-    background-color: $white;
-  }
-
-  #content {
-    margin-top: 7rem !important;
-  }
+  background: white;
 }
 
 .navbar-yacht .navbar-collapse {
