--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,16 +14,10 @@
   <body class="<%= controller_name %>-<%= action_name %>">
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
-
-    <% if controller_name == 'pages' && action_name == 'home' %>
-      <%= render 'layouts/header' %>
-    <% end %>
-
-    <div class="container my-3 bg-white p-3 rounded" id="content">
+    <%= render 'layouts/header' %>
+    <div class="container my-3 bg-white p-3 rounded">
       <%= yield %>
     </div>
-    <% if controller_name == 'pages' && action_name == 'home' %>
-      <%= render 'layouts/footer' %>
-    <% end %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
