--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -73,7 +73,7 @@
 
           <div class="card-body">
             <p class="card-text">
-              <%= link_to 'Book it!', yacht_user_path(@user), class: 'btn btn-success' %>
+              <%= link_to 'Book it!', "mailto:#{@user.email}?subject=I want to book your yacht&body=Hello #{@user.full_name}%0D%0A%0D%0A My name is #{current_user.first_name}, I am interested in booking your #{@yacht.title} yacht.%0D%0A Is it available from ___ to __?", class: 'btn btn-success' %>
             </p>
         </div>
       </div>
