--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -79,3 +79,21 @@ body {
       }
     }
   }
+
+  .box {
+  background-color: #f3f3f3;
+  width: 100%;
+  border-radius: 5px;
+  padding: 20px;
+  list-style: none;
+}
+.carousel-item img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
+.user-info .avatar {
+  width: 80px;
+  margin: auto;
+}
