--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,7 +7,7 @@
   margin: auto;
   background-image: linear-gradient(rgba(0,0,0, 0.2), rgba(0,0,0, 0.2)), url(https://images.unsplash.com/photo-1566288592686-d91a0b04e0e0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80);
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
   justify-content: space-around;
   display: flex;
 }
