--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -1,4 +1,4 @@
-  <h2>List of all Yachts available ⚓️ </h2>
+  <h2 class="mt-3 mb-4">List of all Yachts available ⚓️ </h2>
 
   <div class="row">
   <div class="col-sm-8">
@@ -10,27 +10,19 @@
   </div>
   <div class="col-sm-4">
     <div class="index-map">
-      <label for="geocoder">Location</label>
       <div id="geocoder" class="geocoder"></div>
-      <div style="height: 30vh" class="mb-2 position-relative">
+      <div style="height: 95vh" class="mb-2 position-relative">
         <div id="map" data-apikey="<%= ENV['MAPBOX_KEY'] %>" data-latitude="12.496365"
-          data-longitude="41.902782">
+          data-longitude="41.902782" style="height: 95vh">
         </div>
       </div>
     </div>
   </div>
 </div>
 
-
-
-
-
-
-
-
-
-
-
 <% if policy(Yacht).new? %>
 <%= link_to "Create new listing", yachts_new_path, class: "btn btn-primary" %>
 <% end %>
+<style>
+  .mapboxgl-ctrl-geocoder {max-width: 100%; margin-bottom: 10px; width: 100%}
+  .mapboxgl-canvas {width: auto!important; height: 100%}</style>
