--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,7 @@
               <%= link_to yacht_user_path(current_user), class: "dropdown-item" do %>
                 <%= image_tag 'list.svg' %> Your listings
               <% end %>
-              <%= link_to yachts_new_path, class: "dropdown-item" do %>
+              <%= link_to users_favorite_path, class: "dropdown-item" do %>
                 <%= image_tag 'star.svg' %> Favorites
               <% end %>
             <div class="dropdown-divider"></div>
