--- a/app/assets/stylesheets/pages/_new_yacht.scss
+++ b/app/assets/stylesheets/pages/_new_yacht.scss
@@ -11,3 +11,18 @@
     width: 100%;
   }
 }
+
+.card-yacht {
+  position: relative;
+  max-width: 18rem;
+}
+.remove-favorite {
+      position: absolute;
+    right: -12px;
+    top: -10px;
+    font-size: 1rem;
+    background: #f4f4f4;
+    padding: 2px 9px;
+    border-radius: 100%;
+    color: black;
+}
