--- a/app/views/yachts/_form.html.erb
+++ b/app/views/yachts/_form.html.erb
@@ -31,6 +31,6 @@
 
   <%= f.input :photos, as: :file, input_html: {multiple: true} %>
   <div class="form-actions mt-3">
-    <%= f.button :submit, "Create y", class: 'btn btn-primary w-100', id: 'send-yacht' %>
+    <%= f.button :submit, "Create yacht!", class: 'btn btn-primary w-100', id: 'send-yacht' %>
   </div>
 <% end %>
