--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -1,3 +1,4 @@
+<%= link_to 'Back to results', yachts_path %>
 <h2 class="mt-2 mb-3"><%= @yacht.title.titlecase %></h2>
 
 <% if @yacht.photos.attached? %>
@@ -75,10 +76,10 @@
             <p class="card-text">
               <% if @yacht.user_id == current_user.id %>
                 <% if policy(@yacht).destroy? %>
-                  <%= link_to "update", yacht_edit_path(@yacht), class: 'badge badge-warning mt-3' %>
+                  <%= link_to "Edit yacht", yacht_edit_path(@yacht), class: 'btn btn-warning' %>
                 <% end %>
                 <% if policy(@yacht).update? %>
-                  <%= link_to "remove", yacht_path(@yacht), method: :delete, class: 'badge badge-danger mt-3' %>
+                  <%= link_to "Remove", yacht_path(@yacht), method: :delete, class: 'btn btn-outline-danger' %>
                 <% end %>
               <% elsif user_signed_in? %>
                 <%= link_to 'Book it!', "mailto:#{@user.email}?subject=I want to book your yacht&body=Hello #{@user.full_name} %0D%0A%0D%0A My name is #{current_user.first_name}, I am interested in booking your #{@yacht.title} yacht.%0D%0A Is it available from ___ to __?", class: 'btn btn-success' %>
