--- a/app/assets/stylesheets/pages/_new_yacht.scss
+++ b/app/assets/stylesheets/pages/_new_yacht.scss
@@ -26,3 +26,24 @@
     border-radius: 100%;
     color: black;
 }
+
+.yachts-show {
+  .box {
+    background-color: #f3f3f3;
+    width: 100%;
+    border-radius: 5px;
+    padding: 20px;
+    list-style: none;
+  }
+  .carousel-item img {
+      width: 100%;
+      height: 400px;
+      object-fit: cover;
+  }
+
+  .user-info .avatar {
+    width: 80px;
+    height: 80px;
+    margin: auto;
+  }
+}
