--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -43,6 +43,7 @@
       <p class="box"><%= @yacht.description %></p>
     </div>
 
+    <% if @yacht.service_types.present? %>
     <div>
       <h4>Services</h4>
       <ul class="box">
@@ -51,7 +52,9 @@
         <% end %>
       </ul>
     </div>
+    <% end %>
 
+    <% if @yacht.equipment_types.present? %>
     <div>
       <h4>Equipments</h4>
       <ul class="box">
@@ -60,6 +63,7 @@
         <% end %>
       </ul>
     </div>
+    <% end %>
 
   </div>
 
@@ -132,22 +136,3 @@
   </div>
 </div>
 
-<style>
-.box {
-  background-color: #f3f3f3;
-  width: 100%;
-  border-radius: 5px;
-  padding: 20px;
-  list-style: none;
-}
-.carousel-item img {
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-}
-
-.user-info .avatar {
-  width: 80px;
-  margin: auto;
-}
-</style>
