--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -37,6 +37,9 @@
                 <%= link_to "update profile", "#", class: "small", data: { toggle: 'modal', target: '#editUserModal' } %>
               </div>
             </div>
+            <%= link_to  users_bookings_path, class: "dropdown-item" do %>
+                <%= image_tag 'bookmark.svg' %> Your bookings
+              <% end %>
               <%= link_to yacht_user_path(current_user), class: "dropdown-item" do %>
                 <%= image_tag 'list.svg' %> Your listings
               <% end %>
